k8s/dev/server-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: server
spec:
  selector:
    app: server
  type: NodePort
  ports:
    - port: 8080
      targetPort: envoy-port
      nodePort: 30000
      name: envoy-port
    - port: 9901
      targetPort: envoy-admin
      name: envoy-admin
