k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chat-server-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /grpc/?(.*)
        backend:
          serviceName: server
          servicePort: envoy-port
      - path: /envoy/?(.*)
        backend:
            serviceName: server
            servicePort: envoy-admin-port
